--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bundle.js"
+    "start": "node bundle.js",
+    "pull": "git pull origin main"
   },
   "repository": {
     "type": "git",
