--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "run.sh",
+    "start": "chmod 777 run.sh && ./run.sh",
     "push": "git pull origin main && git push origin main",
     "pull": "git pull origin main"
   },
